various typo fixes and small changes

--- a/01_agama/dirgha/DA_22.md
+++ b/01_agama/dirgha/DA_22.md
@@ -19,7 +19,7 @@ next: DA_23.html
 3\. This priest was descended from seven generations of fathers and mothers who were genuine [priests], so he wasn’t slighted by others. He had mastered the three Vedas[\[3\]](#n3){:#ref3} and could discern all the various kinds of scriptures. He was learned about all the subtleties of the world’s scriptures. He was also skilled in the techniques of [recognizing] the great man’s signs, divining fortune and misfortune, and [performing] sacrifices and rituals. He had 500 disciples whom he taught without exception.
 {:#p3}
 
-4\. The priests, prominent people, and householders in Campā heard: “The ascetic Gautama of the Śākya clan, who had left the home life [113a] and achieved awakening, is touring among the people of Aṅga and has arrived by the side of Gargā Pond. He possesses a great reputation that’s heard throughout the world. He’s a Tathāgata, an Arhat,[\[4\]](#n4){:#ref4} and a Completely Awakened One who has perfected the ten epithets. Among gods, worldly men, and demons, whether they’re in the assemblies of Māra, gods, ascetics, or priests, he is self-realized and teaches the Dharma for others. His words are all genuine in the beginning, middle, and end, complete in content and expression, and purify the religious life.”
+4\. The priests, prominent people, and householders in Campā heard: “The ascetic Gautama of the Śākya clan, who had left the home life and achieved awakening, is touring among the people of Aṅga and has arrived by the side of Gargā Pond. He possesses a great reputation that’s heard throughout the world. He’s a Tathāgata, an Arhat,[\[4\]](#n4){:#ref4} and a Completely Awakened One who has perfected the ten epithets. Among gods, worldly men, and demons, whether they’re in the assemblies of Māra, gods, ascetics, or priests, he is self-realized and teaches the Dharma for others. His words are all genuine in the beginning, middle, and end, complete in content and expression, and purify the religious life.”
 {:#p4}
 
 5\. They said, “It would be fitting to go and have an audience with such a realized man as this. We should go and pay him a visit now!” After they said that, they followed each other as they left the city. Crowds of people headed out to visit the Buddha.
