--- a/01_agama/dirgha/DA_29.md
+++ b/01_agama/dirgha/DA_29.md
@@ -9,13 +9,13 @@ next: DA_30-1.html
 # [The Long Discourses](index.html)
 ## 29. Lohitya
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was in Kauśala touring among the people. With an assembly of 1,250 great monks, he went to the brahmin town of [Śālavatī] and stopped to rest to the north in a rosewood grove.[\[2\]](#n2){:#ref2}
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was in Kauśala touring among the people. With an assembly of 1,250 great monks, he went to the brahmin town of \*Śālavatī and stopped to rest to the north in a rosewood grove.[\[2\]](#n2){:#ref2}
 {:#p1}
 
 2\. There was a brahmin then named Lohitya[\[3\]](#n3){:#ref3} who was staying in a sal grove. His town was bountiful and happy, and the people were flourishing. King Prasenajit had awarded this town to that brahmin as his brahmin due.[\[4\]](#n4){:#ref4} This brahmin was descended from seven generations of fathers and mothers who were genuine, so he wasn’t slandered by others. He chanted and fully understood the other canon of three divisions,[\[5\]](#n5){:#ref5} and he could entirely discern the various kinds of scriptures. He was also skilled in the principle of the great man’s signs, divining fortune and misfortune, and sacrifices and rituals.
 {:#p2}
 
-3\. He heard that the mendicant Gautama of the Śākya clan, who had left the home life [113a] and achieved awakening, was touring among the people of Kauśala and had arrived in a rosewood grove. This Gautama had a great reputation that was heard throughout the world. He was a Tathāgata, an Arhat, and a Perfectly Awakened One, fully endowed with the ten epithets. Of gods, worldly men, and demons, whether they were assemblies of Māra’s gods, mendicants, or brahmins, he had himself realized and taught the Dharma for others. It was good in the beginning, middle, and end, complete in meaning and manner, and the purification of the religious life. Lohitya said: “It would be fitting to go and have an audience with such a true man as this. I would like to go and pay him a visit now.”
+3\. He heard that the mendicant Gautama of the Śākya clan, who had left the home life and achieved awakening, was touring among the people of Kauśala and had arrived in a rosewood grove. This Gautama had a great reputation that was heard throughout the world. He was a Tathāgata, an Arhat, and a Perfectly Awakened One, fully endowed with the ten epithets. Of gods, worldly men, and demons, whether they were assemblies of Māra’s gods, mendicants, or brahmins, he had himself realized and taught the Dharma for others. It was good in the beginning, middle, and end, complete in meaning and manner, and the purification of the religious life. Lohitya said: “It would be fitting to go and have an audience with such a true man as this. I would like to go and pay him a visit now.”
 {:#p3}
 
 4\. The brahmin then left his village and went to visit the Bhagavān in the rosewood grove. After making polite inquiries, he sat to one side. The Buddha taught the Dharma for him, and the instruction was profitable and elating. After that brahmin heard the Dharma, he said to the Buddha, “May the Bhagavān and the great assembly clearly accept my invitation.”
@@ -40,7 +40,7 @@ The Bhagavān then silently accepted his invitation.
 
 The Buddha told the barber, “This is only a minor subject that’s easily taught.”
 
-10\. When the Bhagavān arrived at the brahmin’s residence, he prepared a seat, and sat down. The brahmin then personally served them various delicious foods, providing it to the Buddha and the assembly. When they had finished the meal, left with their bowls, and were done washing them, [113b] they gave a small sofa to the Buddha to sit in front.
+10\. When the Bhagavān arrived at the brahmin’s residence, he prepared a seat, and sat down. The brahmin then personally served them various delicious foods, providing it to the Buddha and the assembly. When they had finished the meal, left with their bowls, and were done washing them, they gave a small sofa to the Buddha to sit in front.
 {:#p10}
 
 11\. The Buddha then told Lohitya, “Yesterday, you weren’t far away after you left when a bad view occurred to you: ‘Mendicants and brahmins often know the good Dharma, and many are their proofs, but they shouldn’t teach it to other people. They simply know it for themselves and desist from discussing it with others. It’s like a man who builds a new prison after he destroys an old prison. It’s a greedy, bad, and unwholesome thing!’ Is that statement true?”
@@ -63,7 +63,7 @@ Lohitya said, “Yes, it’s true that this happened.”
 16\. “Lohitya, those disciples say to the teacher, ‘Teacher, now you’ve shaven off your hair, put on the three Dharma robes, and left home to cultivate the path. Here in the present, you could be rid of the myriad afflictions and attain the state of a superior man. Here in the present, however, you aren’t able to be rid of the myriad afflictions, although you’ve attained a little or a lot of the state of a superior man. Your own benefit is incomplete, yet you teach the Dharma for disciples, which causes your disciples to no longer respect, serve, or make offerings. They just share your support and reside as equals.’”
 {:#p16}
 
-17\. The Buddha [113c] continued, “Lohitya, like a man who rubs another’s back with his hand after walking, this is called a greedy, degenerate thing. This is the second teacher whom it’s possible to admonish yourself. It’s a precept of nobles, a precept of the discipline, a precept of propriety, and a precept of the time.
+17\. The Buddha continued, “Lohitya, like a man who rubs another’s back with his hand after walking, this is called a greedy, degenerate thing. This is the second teacher whom it’s possible to admonish yourself. It’s a precept of nobles, a precept of the discipline, a precept of propriety, and a precept of the time.
 {:#p17}
 
 18\. He also told Lohitya, “A third teacher shaves off his hair, wears the three Dharma robes, and leaves home to cultivate the path. Here in the present, he could be rid of the afflictions, and he could develop and attain the state of a superior man. Here in the present, however, he isn’t able to be rid of the myriad afflictions, even though he again does attain a little or a lot of the state of a superior man. His own benefit is incomplete, yet he teaches the Dharma for his disciples. His disciples don’t respect or serve him, supporting him and residing as his equals.
@@ -96,7 +96,7 @@ Lohitya said, “Yes, it’s true that this happened.”
 25\. “Is someone with unwholesome thoughts born in good destinies, or do they fall into bad destinies?”
 {:#p25}
 
-“He’s born to a bad [114a] destiny.”
+“He’s born to a bad destiny.”
 
 26\. “Lohitya, he’s like a man who says to King Prasenajit, ‘The country belongs to the king. The wealth within it is entirely for the king’s own use. Don’t share it with anyone else!’ How is it, Lohitya? If he put that person’s words into action, would the king stop sharing it with other people?”
 {:#p26}
@@ -171,7 +171,7 @@ Lohitya said, “Yes, it’s true that this happened.”
 40\. The brahmin Lohitya then said to the Buddha, “I take refuge in the Buddha, refuge in the Dharma, and refuge in the Saṃgha. Please permit me to be a layman in the correct teaching. From this day forward, I will not kill, steal, commit sexual misconduct, lie, or drink alcohol for all my life.”
 {:#p40}
 
-41\. After the Buddha had taught the Dharma, the brahmin Lohitya heard what the Buddha had said, rejoiced, [114b] and approved.
+41\. After the Buddha had taught the Dharma, the brahmin Lohitya heard what the Buddha had said, rejoiced, and approved.
 {:#p41}
 
 ---
