--- a/01_agama/dirgha/DA_30-10.md
+++ b/01_agama/dirgha/DA_30-10.md
@@ -24,7 +24,7 @@ next: DA_30-11.html
 4\. “When the asura king saw the heavens, he was delighted, and an aspiration arose in him. He thought, ‘This place is supreme! Perhaps I will live here. How could I go back to the asura palace?’ When that thought occurred to him, he was freed from the five bonds and was presented with five delights. When the asura had the thought to return to his own palace, then the five bonds tied him back up, and the five delights left him.
 {:#p4}
 
-5\. “The bonds tying up the asura then became quite strong. The bonds that tie up Māra are even stronger than his was. Someone who posits a self is bound by Māra. Someone who doesn’t posit a self is freed from Māra’s bonds. The feeling of self is a bond. The feeling of craving is a bond.[n] ‘I will exist’ is a bond. ‘I will not exist’ is a bond. ‘I’ll have form’ is a bond. ‘I’ll have no form’ is a bond. ‘I’ll have form and no form’ is a bond. ‘I’ll have conception’ is a bond. ‘I’ll have no conception’ is a bond. ‘I’ll have conception and no conception’ is a bond. ‘Self’ is a great trouble, an abscess, and a thorn.
+5\. “The bonds tying up the asura then became quite strong. The bonds that tie up Māra are even stronger than his was. Someone who posits a self is bound by Māra. Someone who doesn’t posit a self is freed from Māra’s bonds. The feeling of self is a bond. The feeling of craving is a bond. ‘I will exist’ is a bond. ‘I will not exist’ is a bond. ‘I’ll have form’ is a bond. ‘I’ll have no form’ is a bond. ‘I’ll have form and no form’ is a bond. ‘I’ll have conception’ is a bond. ‘I’ll have no conception’ is a bond. ‘I’ll have conception and no conception’ is a bond. ‘Self’ is a great trouble, an abscess, and a thorn.
 {:#p5}
 
 6\. “Therefore, a noble disciple knows that ‘self’ is a great trouble, an abscess, and a thorn. They abandon the notions of self and cultivate selfless conduct. They regard that ‘self’ as a heavy burden, as reckless, and as existence.
