--- a/01_agama/dirgha/DA_30-4.md
+++ b/01_agama/dirgha/DA_30-4.md
@@ -536,7 +536,7 @@ Which resulted from his bad intent and words.’
 
 #### The Three Heavenly Messengers
 
-123\. The Buddha told the monks, “There are three [heavenly] messengers. What are the three? The first is old age, the second is illness, and the third is death. There are sentient beings whose physical conduct is bad, whose verbal conduct is bad, and whose mental intent is bad. When their bodies break up and their lives end, they fall to Hell.
+123\. The Buddha told the monks, “There are three [heavenly] messengers.[\[4\]](#n4){:#ref4} What are the three? The first is old age, the second is illness, and the third is death. There are sentient beings whose physical conduct is bad, whose verbal conduct is bad, and whose mental intent is bad. When their bodies break up and their lives end, they fall to Hell.
 {:#p123}
 
 124\. “The wardens of hell bring these sinners to King Yama. Upon arriving, the wardens tell the King, ‘This one was summoned by the heavenly messengers. Please, great king, question them well about their account.’
@@ -661,9 +661,10 @@ They are certain to parinirvāṇa.”
 
 ### Notes
 
-1. {:#n1}This is Chapter 4 of <em>sūtra</em> no. 30 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0121b28" target="_blank">T1.1.121b28-7a26</a>).This chapter is one of the most brutally detailed descriptions of the Buddhist hells. Parallels are found in the <cite>Commentary to the Perfection of Wisdom Sutra</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T25n1509_p0175c18" target="_blank">T1509.25.175c18ff</a>), Vasubandhu’s <cite>Abhidharma Kośa</cite>, and the <cite>The Correct Dharma Abode of Mindfulness Sutra</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T17n0721_p0027a17" target="_blank">T721.27a17ff</a>). This version differs somewhat from the presentation of eight hot and eight cold hells found in the above Sarvāstivāda accounts, but the two versions appear to derive from a common source. They share many of the same names of their hells, but the descriptions are often quite different. They also both include the concept of sixteen lesser hells. [\[back\]](#ref1)
+1. {:#n1}This is Chapter 4 of <em>sūtra</em> no. 30 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0121b28" target="_blank">T1.1.121b28-7a26</a>).This chapter is one of the most brutally detailed descriptions of the Buddhist hells. Parallels are found in the <cite>Commentary to the Perfection of Wisdom Sūtra</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T25n1509_p0175c18" target="_blank">T1509.25.175c18ff</a>), Vasubandhu’s <cite>Abhidharma Kośa</cite>, and the <cite>The Correct Dharma Abode of Mindfulness Sūtra</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T17n0721_p0027a17" target="_blank">T721.27a17ff</a>). This version differs somewhat from the presentation of eight hot and eight cold hells found in the above Sarvāstivāda accounts, but the two versions appear to derive from a common source. They share many of the same names of their hells, but the descriptions are often quite different. They also both include the concept of sixteen lesser hells. [\[back\]](#ref1)
 2. {:#n2}These names were translated to Chinese, and their meanings sometimes suggest different S. equivalents than we find in later sources. For example, the first great hell is called Saṃjīva (“survival”) in later sources, but here it clearly was Saṃjñā (“perception”) instead. I’ve indicated these reconstructions with \* when they don’t agree with later sources. Briefly, the meanings of these names are: Perception (Saṃjñā), Black Cord (Kālasūtra), Struck Together (\*Saṃhata), Wailing (\*Roravaṇa), Screaming (\*Mahāroravaṇa), Roasting Fire (Tapana), Great Roasting Fire (Mahātapana), and Uninterrupted (Avīci). [\[back\]](#ref2)
 3. {:#n3}The names of the sixteen lesser hells were also translated to Chinese. It’s more difficult to reconstruct all of them to S. equivalents, so I’ve translated them to English. [\[back\]](#ref3)
+4. {:#n4}<em>three [heavenly] messengers.</em> This section is parallel with <a href="https://suttacentral.net/an3.36" target="_blank">AN 3.36</a> and <a href="https://suttacentral.net/mn130" target="_blank">MN 130</a>. [\[back\]](#ref4)
 
 ---
 
