--- a/01_agama/dirgha/DA_30-7.md
+++ b/01_agama/dirgha/DA_30-7.md
@@ -33,7 +33,7 @@ next: DA_30-8.html
 7\. “Except for the palaces of the Sun and Moon, the palace halls of the four god kings are forty yojanas across. Those palaces have seven walls, seven balustrades, seven nettings, and seven rows of trees encircling them with decorations made of the seven treasures … and countless birds sing to each other peacefully as before.
 {:#p7}
 
-8\. “Those palace halls are forty yojanas, twenty yojanas, or at least five yojanas across. From the city Refuge to Many, there’s a treasure stairway that goes to the city Bhadrottamā. There’s a stairway that leads to the city Sudarśana. There’s a stairway that leads to the city Cūḷasudarśana. There’s a stairway that leads to the city Terrible and the city Heavenly Respect. There’s a stairway that leads to the park Kapīvanta. There’s a stairway that leads to Lake Nalinī. There’s also a stairway that leads to the palace of the great minister of the four god kings.
+8\. “Those palace halls are forty yojanas, twenty yojanas, or at least five yojanas across. From the city Refuge to Many, there’s a treasure stairway that goes to the city \*Bhadrottamā. There’s a stairway that leads to the city Sudarśana. There’s a stairway that leads to the city Cūḷasudarśana. There’s a stairway that leads to the city Terrible and the city Heavenly Respect. There’s a stairway that leads to the park Kapīvanta. There’s a stairway that leads to Lake Nalinī. There’s also a stairway that leads to the palace of the great minister of the four god kings.
 {:#p8}
 
 #### King Vaiśravaṇa
