--- a/01_agama/other/T110.md
+++ b/01_agama/other/T110.md
@@ -41,7 +41,7 @@ next: T112.html
 10\. “You, monks! This noble truth of the path leading to suffering’s cessation is a teaching to comprehend. Thus, it has been cultivated. Reasoned attention to what’s heard in this teaching gives rise to vision, knowledge, insight, and awakening.
 {:#p10}
 
-11\. “You, monks! If I had yet to comprehend the teaching of these four noble truths in three turnings and 12 aspects, then vision, knowledge, insight, and awakening couldn’t have arisen in me. I wouldn’t have rid myself of the afflicted mind and attained liberation while I was among gods, [504b] Māra, Brahmā, and all the world’s ascetics and priests. I couldn’t have realized the unsurpassed enlightenment.
+11\. “You, monks! If I had yet to comprehend the teaching of these four noble truths in three turnings and 12 aspects, then vision, knowledge, insight, and awakening couldn’t have arisen in me. I wouldn’t have rid myself of the afflicted mind and attained liberation while I was among gods, Māra, Brahmā, and all the world’s ascetics and priests. I couldn’t have realized the unsurpassed enlightenment.
 {:#p11}
 
 12\. “You, monks! It was because I understood this teaching of these four truths in three turnings and 12 aspects that vision, knowledge, insight, and awakening all could arise in me. I then rid myself of the afflicted mind and attained liberation while I was among the gods, Māra, Brahmā, and all the world’s ascetics and priests. It was then that I could realize the unsurpassed enlightenment.”
