--- a/01_agama/dirgha/DA_28.md
+++ b/01_agama/dirgha/DA_28.md
@@ -1,24 +1,24 @@
 ---
 layout: default
-title: The Long Discourses | 28. [Poṭṭhapāda]
+title: The Long Discourses | 28. Pṛṣṭhapāla
 type: kramdown
 base: ../../
 previous: DA_27.html
 next: DA_29.html
 ---
 # [The Long Discourses](index.html)
-## 28. [Poṭṭhapāda]
+## 28. Pṛṣṭhapāla
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park of Śrāvastī. He was accompanied by a great assembly of 1,250 monks.
 {: #p1}
 
-2\. At sunrise, the Buddha put on his robe and took his bowl into Śrāvastī to solicit alms. The Bhagavān thought, “It’s too early to solicit today’s alms. I’d better go see [Poṭṭhapāda][\[2\]](#n2){:#ref2} in the wanderers’ grove. I’ll solicit alms later when it’s the right time.” The Bhagavān then went to the wanderers’ grove.
+2\. At sunrise, the Buddha put on his robe and took his bowl into Śrāvastī to solicit alms. The Bhagavān thought, “It’s too early to solicit today’s alms. I’d better go see Pṛṣṭhapāla[\[2\]](#n2){:#ref2} in the wanderers’ grove. I’ll solicit alms later when it’s the right time.” The Bhagavān then went to the wanderers’ grove.
 {: #p2}
 
-3\. The wanderer [Poṭṭhapāda] saw the Buddha coming from a distance and got up to greet him. “Welcome, ascetic Gautama! It’s been a long time! What brings you here today? You can prepare a seat in the front.”
+3\. The wanderer Pṛṣṭhapāla saw the Buddha coming from a distance and got up to greet him. “Welcome, ascetic Gautama! It’s been a long time! What brings you here today? You can prepare a seat in the front.”
 {: #p3}
 
-4\. The Bhagavān then prepared his seat, asking [Poṭṭhapāda], “When you have meetings here, what do you do? What do you discuss?”
+4\. The Bhagavān then prepared his seat, asking Pṛṣṭhapāla, “When you have meetings here, what do you do? What do you discuss?”
 {: #p4}
 
 5\. The wanderer told the Buddha, “Bhagavān, yesterday, there was a meeting of wanderers, ascetics, and priests at the priest’s meeting all. They discussed this subject with contradictory theories.
@@ -201,13 +201,13 @@ The Buddha told the wanderer, “I explain the truth of suffering … formation 
 57\. The Bhagavān then taught the Dharma for the wanderer. After he was encouraged by its plain instruction, the Buddha rose from his seat and left.
 {: #p57}
 
-58\. Not long after the Buddha departed, some other wanderers said to the wanderer [Poṭṭhapāda], “Why were you listening to the teaching of that ascetic Gautama and approving of what he said? Gautama says, ‘“Self and the world is permanent … the Tathāgata neither dies nor doesn’t die” are incompatible with meaning … so I don’t explain them.’ Why did you approve of those words? We cannot have such discussions with the ascetic Gautama.”
+58\. Not long after the Buddha departed, some other wanderers said to the wanderer Pṛṣṭhapāla, “Why were you listening to the teaching of that ascetic Gautama and approving of what he said? Gautama says, ‘“Self and the world is permanent … the Tathāgata neither dies nor doesn’t die” are incompatible with meaning … so I don’t explain them.’ Why did you approve of those words? We cannot have such discussions with the ascetic Gautama.”
 {: #p58}
 
-59\. [Poṭṭhapāda] replied to the wanderers, “The ascetic Gautama taught, ‘“Self and the world are permanent … the Tathāgata neither dies nor doesn’t die” aren’t compatible with the meaning … so I don’t explain them.’ I don’t approve of his words, either. It’s just that the ascetic Gautama lives relying on a teaching, so he speaks using that teaching. The escape uses this teaching, so why would I contradict his wise statement? A subtle Dharma statement like the ascetic Gautama’s can’t be contradicted.”
+59\. Pṛṣṭhapāla replied to the wanderers, “The ascetic Gautama taught, ‘“Self and the world are permanent … the Tathāgata neither dies nor doesn’t die” aren’t compatible with the meaning … so I don’t explain them.’ I don’t approve of his words, either. It’s just that the ascetic Gautama lives relying on a teaching, so he speaks using that teaching. The escape uses this teaching, so why would I contradict his wise statement? A subtle Dharma statement like the ascetic Gautama’s can’t be contradicted.”
 {: #p59}
 
-60\. At a different time, the wanderer [Poṭṭhapāda] visited the Bhagavān with Hastikaśīrṣa Śāriputra.[\[3\]](#n3){:#ref3} After exchanging greetings, he sat to one side. Hastikaśīrṣa Śāriputra bowed to the Buddha and sat, too.
+60\. At a different time, the wanderer Pṛṣṭhapāla visited the Bhagavān with Hastikaśīrṣa Śāriputra.[\[3\]](#n3){:#ref3} After exchanging greetings, he sat to one side. Hastikaśīrṣa Śāriputra bowed to the Buddha and sat, too.
 {: #p60}
 
 61\. The wanderer said to the Buddha, “When the Buddha paid us a visit before, the other wanderers said to me not long after you departed, ‘Why were you listening to what the ascetic Gautama teaches and approving of what he said? Gautama says, “‘Self and the world are permanent … the Tathāgata neither dies nor doesn’t die’ aren’t compatible with meaning … so I don’t explain them.” Why did you approve of those words? We cannot have such discussions with the ascetic Gautama.’
@@ -311,7 +311,7 @@ The wanderer answered, “Yes, it’s based on a deception.”
 83\. The Buddha said, “Those ascetics and priests are likewise. They are deceptive and not honest.”
 {: #p83}
 
-84\. The Buddha addressed [Poṭṭhapāda], “You say that self is the body of four elements and six senses that’s born, nurtured by parents, drinks milk until it’s grown, wears clothes and ornaments, and which is an impermanent, eroding thing. You say this is the self, but I ask, ‘Is this defilement or purity, and does it attain freedom?’
+84\. The Buddha addressed Pṛṣṭhapāla, “You say that self is the body of four elements and six senses that’s born, nurtured by parents, drinks milk until it’s grown, wears clothes and ornaments, and which is an impermanent, eroding thing. You say this is the self, but I ask, ‘Is this defilement or purity, and does it attain freedom?’
 {: #p84}
 
 85\. “You might think that defilement cannot cease, that purity cannot arise, and that suffering is eternal, but don’t think that. Why is that? The cessation of defilement is possible, and the production of purity is possible. Dwelling in a place of well-being is joyful and delightful. By focusing attention and unifying one’s mind, wisdom increases and broadens.
@@ -365,7 +365,7 @@ The wanderer answered, “Yes, it’s based on a deception.”
 101\. Hastikaśīrṣa then said to the Buddha, “Bhagavān, I now take refuge in the Buddha, refuge in the Dharma, and refuge in the Saṅgha. Permit me to be a layman in the correct teaching! From now on, I won’t kill, steal, commit adultery, lie, or drink alcohol for the rest of my life.”
 {: #p101}
 
-102\. The wanderer [Poṭṭhapāda] then said to the Buddha, “May I be given the precepts of a renunciate in the Buddha’s Dharma?”
+102\. The wanderer Pṛṣṭhapāla then said to the Buddha, “May I be given the precepts of a renunciate in the Buddha’s Dharma?”
 {: #p102}
 
 The Buddha told the wanderer, “If someone of a different training wants to leave home for the path in my Dharma, they’re first observed for four months, and then the assembly gives their assent. After that, they are given the precepts and leave home. While there’s this rule, the person is just observed.”
@@ -379,7 +379,7 @@ The Buddha told the wanderer, “If someone of a different training wants to lea
 105\. That wanderer then received the precepts and left home. It wasn’t long after than his faith became firm, and he purified cultivation of the religious life. In the present life, he realized for himself, ‘Birth and death have been ended, the task has been accomplished, and the religious life has been established. I won’t be subject to a later life.’ He then became an arhat.
 {: #p105}
 
-106\. When [Poṭṭhapāda] heard what the Buddha taught, he rejoiced and approved.
+106\. When Pṛṣṭhapāla heard what the Buddha taught, he rejoiced and approved.
 {: #p106}
 
 ---
@@ -387,7 +387,7 @@ The Buddha told the wanderer, “If someone of a different training wants to lea
 ### Notes
 
 1. {:#n1}This is <em>sūtra</em> no. 28 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0109c22" target="_blank">T1.1.109c20-112c19</a>). The direct parallel for this <em>sūtra</em> is <a href="https://suttacentral.net/dn9" target="_blank">DN 9</a>. [\[back\]](#ref1)
-2. {:#n2}*[Poṭṭhapāda]*. Ch. 布吒婆樓, MCh. po-ṭă-bua-ləu = \*Potava(r/l)u. P. Poṭṭhapāda. Lacking a Sanskrit attestation, I’ve substituted the Pali equivalent. [\[back\]](#ref2)
+2. {:#n2}<em>Pṛṣṭhapāla</em>. Ch. 布吒婆樓, MCh. po-ṭă-bua-ləu = <em>poṭavalo</em>. P. <em>poṭṭhapāda</em>, S. <em>pṛṣṭhapāla</em>. The C. translit. appears to match the G. version of P. <em>poṭṭhapāda</em>, except that it agrees with the S. attestation of ending with an <em>-l-</em> instead of a <em>-d-</em>. It’s of interest to note that P. <em>poṭṭha</em> is not well understood by the Theravāda tradition and perhaps is a remnant of an older Prakrit dialect. I’ve adopted the S. attestation. [\[back\]](#ref2)
 3. {:#n3}*Hastikaśīrṣa Śāriputra*. Ch. 象首舍利弗. P. Hatthisāriputta. The Chinese translates the first part of his name as “elephant chief (or head),” which would match Skt. Hastikaśīrṣa, and then adds the common transliteration of Śāriputra. I’ve combined the two to arrive at Skt. Hastikaśīrṣa Śāriputra. [\[back\]](#ref3)
 
 ---
