--- a/01_agama/dirgha/DA_30-9.md
+++ b/01_agama/dirgha/DA_30-9.md
@@ -117,7 +117,7 @@ next: DA_30-10.html
 33\. The Buddha told the monks, “You should know from this that all formed things are impermanent. They are liable to change and disintegrate, which makes them unreliable. Conditioned things are quite troublesome. You should seek the path of freedom that transcends the world.
 {:#p33}
 
-34\. “After the four continents … the Brahma heavens are incinerated, a wind blows the flames up to the Ābhāsvara Heaven.[n] The gods who had recently been born there see these flames and are afraid. They say, ‘Oh! What is that?’
+34\. “After the four continents … the Brahma heavens are incinerated, a wind blows the flames up to the Ābhāsvara Heaven. The gods who had recently been born there see these flames and are afraid. They say, ‘Oh! What is that?’
 {:#p34}
 
 35\. “The gods who were born before them tell the recently born gods, ‘Don’t be afraid! That fire has come before. It’ll come right up to here and stop.’ It’s because they remember the brilliance of previous conflagrations that they are called ‘fire remembering gods.’
@@ -164,7 +164,7 @@ next: DA_30-10.html
 48\. “That water continues to subside countless hundreds of thousands of yojanas. A great wind [rises on all four sides of that water, which is] called Saṅgha. It blows the water and agitates it. The crashing of the waves is immense, and a mass of foam accumulates. The wind blows it off of the water and into the sky. It spontaneously hardens there, forming a heavenly palace [decorated with the seven treasures.] As a result of these events, the Yama Heaven’s palace comes to be.
 {:#p48}
 
-49\. “That water continues to subside countless hundreds of thousands of yojanas. The foam on the water is 68,000 yojanas deep,[n] and it’s bounds are endless. It’s like the foam on the water when a stream flows from an underground spring.
+49\. “That water continues to subside countless hundreds of thousands of yojanas. The foam on the water is 68,000 yojanas deep, and it’s bounds are endless. It’s like the foam on the water when a stream flows from an underground spring.
 {:#p49}
 
 50\. “What are the events that cause Mount Sumeru to come to be? A windstorm rises and blows the water’s foam into the form of Mount Sumeru, 68,000 yojanas tall and 84,000 yojanas across. It’s made of the four treasures of gold, silver, crystal, and beryl.
