--- a/01_agama/madhyama/MA_200.md
+++ b/01_agama/madhyama/MA_200.md
@@ -42,7 +42,7 @@ After he was reprimanded by those monks, the monk Ariṣṭa held to this bad vi
 
 “After we reprimanded him, he held to this bad view forcefully. He said to one of us, ‘This is the truth! The rest is false!’ He said this three times. Bhagavān, since we were unable to convince him to abandon this bad view, we got up from our seats and departed.”
 
-8\. After the Bhagavān heard this, he told one of the [763c] monks, ‘Go to that monk Ariṣṭa and tell him, ‘The Bhagavān summons you!’”
+8\. After the Bhagavān heard this, he told one of the monks, ‘Go to that monk Ariṣṭa and tell him, ‘The Bhagavān summons you!’”
 {:#p8}
 
 That monk then did as the Bhagavān instructed. He got up from his seat, bowed his head at the Buddha’s feet, circled him three times, and departed. He went to the monk Ariṣṭa and told him, ‘The Bhagavān summons you!’ The monk Ariṣṭa then went to the Buddha, bowed his head at his feet, and withdrew to sit to one side.
@@ -65,7 +65,7 @@ The monks replied, “No.”
 
 The monks answered, “We know the Bhagavān explains the teaching this way: ‘Desire is an obstruction.’ The Bhagavān teaches that desire is an obstruction. Desire is like a chain of bones. The Bhagavān teaches that desire is like a chain of bones. Desire is like a cut of meat. The Bhagavān teaches that desire is like a cut of meat. Desire is like holding a torch. The Bhagavān teaches that desire is like holding a torch. Desire is like a fire pit. The Bhagavān teaches that desire is like a fire pit. Desire is like a viper. The Bhagavān teaches that desire is like a viper. Desire is like a dream. The Bhagavān teaches that desire is like a dream. Desire is like a loan. The Bhagavān teaches that desire is like a loan. Desire is like a tree fruit. The Bhagavān teaches that desire is like a tree fruit. We know that the Bhagavān explains the teaching this way.”
 
-13\. The Bhagavān praised them, “Good! Good, monks! You know that I explain the teaching this way. Why is that? I also say this: ‘Desire is an obstruction.’ I teach that desire is an obstruction. Desire is like a chain of bones. I teach that desire is like a chain of bones. Desire is like a cut of meat. I teach that desire is like a cut of meat. Desire is like holding a torch. I teach that desire is like holding a torch. Desire is like a fire pit. I teach that desire is like a fire pit. Desire is like a viper. I teach that desire is like a viper. Desire is like a dream. I teach that desire is like a dream. Desire is like a loan. I [764a] teach that desire is like a loan. Desire is like a tree fruit. I teach that desire is like a tree fruit.”
+13\. The Bhagavān praised them, “Good! Good, monks! You know that I explain the teaching this way. Why is that? I also say this: ‘Desire is an obstruction.’ I teach that desire is an obstruction. Desire is like a chain of bones. I teach that desire is like a chain of bones. Desire is like a cut of meat. I teach that desire is like a cut of meat. Desire is like holding a torch. I teach that desire is like holding a torch. Desire is like a fire pit. I teach that desire is like a fire pit. Desire is like a viper. I teach that desire is like a viper. Desire is like a dream. I teach that desire is like a dream. Desire is like a loan. I teach that desire is like a loan. Desire is like a tree fruit. I teach that desire is like a tree fruit.”
 {:#p13}
 
 14\. The Bhagavān praised them again, “Good, good! All of you know that I explain the teaching this way. Still, this foolish man Ariṣṭa is mistaken in how he understands my meaning and words. Because he is mistaken in how he understands it, he misrepresents me. He does harm to himself; it’s a violation and a misdeed. It doesn’t please wise religious practitioners. He obtains a great misdeed by it. You foolish man, know that this is a bad and unwholesome position.”
@@ -84,7 +84,7 @@ The monks answered, “We know the Bhagavān explains the teaching this way: ‘
 18\. “That person’s attempt to catch a snake doesn’t obtain its goal. They only experience suffering and trouble. Why is that? It’s because they don’t well understand the way to grasp a snake. Thus, some deluded people mistakenly understand the meaning and the words [of the teaching]. As a result of their mistaken understanding, they know the teaching to be ‘such and such,’ meaning the correct sūtras, songs, assurances, verses, circumstances, records, legends, lectures, birth places, extensive discourses, unprecedented things, and explanations of meaning. They know their meaning in order to debate it; they don’t know their meaning in order to be liberated. Their knowledge of the teaching doesn’t obtain its goal; they only experience suffering and trouble. Why is that? It’s because they mistakenly understand the teaching.
 {:#p18}
 
-19\. “Perhaps there’s a clansman who isn’t mistaken and well [764b] understands the meaning and the words [of the teaching]. As a result of not being mistaken and well understanding it, he knows the teaching to be ‘such and such,’ meaning the correct sūtras, songs, assurances, verses, circumstances, records, legends, lectures, birth places, extensive discourses, unprecedented things, and explanations of meaning. He doesn’t know their meaning in order to debate it; he only knows their meaning in order to be liberated. His knowledge of the teaching obtains its goal, so he doesn’t experience suffering and trouble. Why is that? It’s because he doesn’t mistakenly understand the teaching.
+19\. “Perhaps there’s a clansman who isn’t mistaken and well understands the meaning and the words [of the teaching]. As a result of not being mistaken and well understanding it, he knows the teaching to be ‘such and such,’ meaning the correct sūtras, songs, assurances, verses, circumstances, records, legends, lectures, birth places, extensive discourses, unprecedented things, and explanations of meaning. He doesn’t know their meaning in order to debate it; he only knows their meaning in order to be liberated. His knowledge of the teaching obtains its goal, so he doesn’t experience suffering and trouble. Why is that? It’s because he doesn’t mistakenly understand the teaching.
 {:#p19}
 
 20\. “It’s like a person who wants to catch a snake and goes out searching for one. When they search for a snake, they carry an iron stick as they walk through a wild forest. Seeing a huge snake, they first pin the snake’s head with the iron stick, and then they grab its head with their hand. Although that snake can twist its tail and coil around that person’s hand, foot, or other limb, it isn’t able to bite them.
@@ -104,7 +104,7 @@ The monks answered, “We know the Bhagavān explains the teaching this way: ‘
 24\. “Again, the person thinks, ‘Perhaps I could gather a pile of wood and grass on this side, bind it together to make a raft, and then ride it across.’
 {:#p24}
 
-25\. “They then make a pile of wood and grass on the shore, bind it together to fashion a raft, and ride it across, reaching the other side safely. The person then thinks, ‘Now, [764c] this raft has been quite helpful to me. After riding this raft, I safely made it from that side over to this one. Perhaps I could put it over my right shoulder or carry it on my head when I leave.’
+25\. “They then make a pile of wood and grass on the shore, bind it together to fashion a raft, and ride it across, reaching the other side safely. The person then thinks, ‘Now, this raft has been quite helpful to me. After riding this raft, I safely made it from that side over to this one. Perhaps I could put it over my right shoulder or carry it on my head when I leave.’
 {:#p25}
 
 26\. “They then put the raft on their right shoulder or carry it on their head. What do you think about that plan? Will this raft be of help to them?”
@@ -141,7 +141,7 @@ The monks then replied, “It’ll be helpful.”
 34\. Then, a monk got up from his seat, adjusted his robes, and saluted the Buddha with his palms together. He said, “Bhagavān, isn’t there a cause for having internal fear?”
 {:#p34}
 
-The Bhagavān [765a] answered, “There is.”
+The Bhagavān answered, “There is.”
 
 35\. The monk again asked, “Bhagavān, what is the cause for having internal fear?”
 {:#p35}
@@ -180,7 +180,7 @@ The Bhagavān answered, “There is.”
 43\. The monk again asked, “Bhagavān, what is the cause for having no external fear?”
 {:#p43}
 
-44\. The Bhagavān answered, “A monk doesn’t thus see and doesn’t [765b] thus speak, ‘This is the soul, this is the world, and this is me. I will have a later existence.’ He doesn’t thus see and doesn’t thus speak. Perhaps he meets the Tathāgata or maybe he meets a disciple of the Tathāgata who’s intelligent, wise, speaks well, and has accomplished wisdom. Whether it’s the Tathāgata or the Tathāgata’s disciple, he explains the teaching in order to cease all identity: ‘Abandon all contaminants, all that’s self, and what’s made by self.’ He explains the teaching in order to cease the tendency of conceit.
+44\. The Bhagavān answered, “A monk doesn’t thus see and doesn’t thus speak, ‘This is the soul, this is the world, and this is me. I will have a later existence.’ He doesn’t thus see and doesn’t thus speak. Perhaps he meets the Tathāgata or maybe he meets a disciple of the Tathāgata who’s intelligent, wise, speaks well, and has accomplished wisdom. Whether it’s the Tathāgata or the Tathāgata’s disciple, he explains the teaching in order to cease all identity: ‘Abandon all contaminants, all that’s self, and what’s made by self.’ He explains the teaching in order to cease the tendency of conceit.
 {:#p44}
 
 45\. “When the Tathāgata or the Tathāgata’s disciple explains the teaching in order to cease all identity, [saying] ‘Abandon all contaminants, all that’s self, and what’s made by self,’ and he explains the teaching in order to cease the tendency of conceit, the monk doesn’t become sad and troubled, doesn’t lament and beat his chest, and doesn’t go crazy. Nor does he say, ‘I’ll be annihilated and never exist again!’ Why is that? For a long time, that monk considered what’s attractive, enjoyable, and memorable. A monk who often does that doesn’t become sad and troubled, doesn’t lament and beat his chest, and doesn’t go crazy. Monk, this is the cause for having no external fear.”
@@ -206,7 +206,7 @@ The monks replied, “No, Bhagavān.”
 
 The monks replied, “No, Bhagavān.”
 
-50\. The Bhagavān praised them, “Good, good! There’s the claim: ‘It’s because of the soul that there’s a self. Without the soul, I see no self. This is the soul. A soul that exists can’t be obtained or imagined. [765c] An abode of views, bonds, attachments, and tendencies in the mind also can’t be obtained or imagined.’ Monks, is that not a perfect statement and view, seeing what’s continuous like that monk Ariṣṭa who before was Gṛdhabādhi?”
+50\. The Bhagavān praised them, “Good, good! There’s the claim: ‘It’s because of the soul that there’s a self. Without the soul, I see no self. This is the soul. A soul that exists can’t be obtained or imagined. An abode of views, bonds, attachments, and tendencies in the mind also can’t be obtained or imagined.’ Monks, is that not a perfect statement and view, seeing what’s continuous like that monk Ariṣṭa who before was Gṛdhabādhi?”
 {:#p50}
 
 The monks answered, “So it is, Bhagavān. It’s a perfect statement and view, seeing what’s continuous like that monk Ariṣṭa who before was Gṛdhabādhi.”
@@ -237,7 +237,7 @@ The monks answered, “So it is, Bhagavān. It’s a perfect statement and view,
 58\. “How has the monk breached the city wall? He has ended endless birth and death and has known it. He uprooted it completely and broke through to no more future birth. Thus, the monk has broken through the city wall.
 {:#p58}
 
-59\. “How does the monk have no gate? [766a] He has ended the five lower bonds and has known it. He has uprooted them completely and broken through to no more future birth. Thus, the monk has no gate.
+59\. “How does the monk have no gate? He has ended the five lower bonds and has known it. He has uprooted them completely and broken through to no more future birth. Thus, the monk has no gate.
 {:#p59}
 
 60\. “How is the monk a mirror of noble wisdom? He has ended self-conceit and has known it. He uprooted it completely and broke through to no more future birth. Thus, the monk is a mirror of noble wisdom. This is known as a monk who has crossed the moat, gone beyond the moat, breached the city wall, has no gate, and is a mirror of noble wisdom.
@@ -257,7 +257,7 @@ The monks answered, “So it is, Bhagavān. It’s a perfect statement and view,
 64\. The Bhagavān addressed the monks, “If another person ridicules you and assaults you with numerous hateful insults or if they are respectful, offer support, serve, and venerate you, don’t make this a cause to be hateful and resentful; don’t become harmful. Don’t be encouraged or joyous, and don’t be happy at heart. Why is that? We have no soul, and nothing is possessed by a soul.
 {:#p64}
 
-65\. “It’s like the dry grass and withered wood outside the entrance of this Jeta’s Grove. Perhaps another person takes it way, burns it, or makes use of it as they like. What do you think? Does that dry grass and withered wood think this: ‘That person took us away, burned us, [766b] and made use of us as they liked’?”
+65\. “It’s like the dry grass and withered wood outside the entrance of this Jeta’s Grove. Perhaps another person takes it way, burns it, or makes use of it as they like. What do you think? Does that dry grass and withered wood think this: ‘That person took us away, burned us, and made use of us as they liked’?”
 {:#p65}
 
 The monks replied, “No, Bhagavān.”
